tests/vendor/valid/trivial/le_true.c
//expect 2
//tags: trivial, binary, logical
int main() {
    return (0 <= 2) + (0 <= 0);
}