tests/vendor/invalid/syntax/missing_first_op_2.c
//tags: trivial, logical, binary
int main() {
    return <= 2;
}